validaciones personalizadas con Pattern

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -7,6 +7,16 @@
 <body>
 	<h3 th:text="${titulo}"></h3>
 	<form th:action="@{/form}" th:object="${usuario}" method="POST">
+	
+	
+	<div>
+			<label for="id">Id</label>
+			<div>
+				<input type="text" name="id" id="id" th:field="*{id}">
+			</div>
+			<div th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></div>
+		</div>
+	
 
 		<div>
 			<label for="nombre">Nombre</label>
