validacion de enteros con Max, Min y NotNull

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -60,6 +60,15 @@
 			</div>
 			<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
 		</div>
+		
+		<div>
+			<label for="cuenta">Cuenta</label>
+			<div>
+				<input type="number" name="cuenta" id="cuenta" th:field="*{cuenta}">
+			</div>
+			<div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}"></div>
+		</div>
+		
 
 		<div>
 			<div>
