--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -16,6 +16,7 @@
 		<li th:text="${usuario.password}"></li>
 		<li th:text="${usuario.id}"></li>
 		<li th:text="${usuario.cuenta}"></li>
+		<li th:text="${usuario.pais}"></li>
 		
 		
 	</ul>
