--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -17,6 +17,7 @@
 		<li th:text="${usuario.id}"></li>
 		<li th:text="${usuario.cuenta}"></li>
 		<li th:text="${usuario.pais}"></li>
+		<li th:text="${#calendars.format(usuario.fechaNacimiento, 'dd-MM-yyyy')}"></li>
 		
 		
 	</ul>
