--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -22,7 +22,7 @@
 			<div>
 				<select id="pais" th:field="*{pais}">
 				<option value="">Seleccione: </option>
-				<option th:each="pais: ${paises}" th:text="${pais}" th:value="${pais}"></option>
+				<option th:each="pais: ${paisesMap.entrySet()}" th:text="${pais.value}" th:value="${pais.key}"></option>
 				
 				</select>
 			</div>
