--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -18,15 +18,15 @@
 		</div>
 	
 	<div>
-			<label for="pais.codigo">Pais</label>
+			<label for="pais">Pais</label>
 			<div>
-				<select id="pais.codigo" th:field="*{pais.codigo}">
+				<select id="pais" th:field="*{pais}">
 				<option value="">Seleccione: </option>
-				<option th:each="pais: ${listaPaises}" th:text="${pais.nombre}" th:value="${pais.codigo}"></option>
+				<option th:each="pais: ${listaPaises}" th:text="${pais.nombre}" th:value="${pais.id}"></option>
 				
 				</select>
 			</div>
-			<div th:if="${#fields.hasErrors('pais.codigo')}" th:errors="*{pais.codigo}"></div>
+			<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}"></div>
 		</div>
 
 		<div>
