--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -7,26 +7,36 @@
 <body>
 	<h3 th:text="${titulo}"></h3>
 	<form th:action="@{/form}" th:object="${usuario}" method="POST">
-	
-	
-	<div>
+
+
+		<div>
 			<label for="id">Id</label>
 			<div>
 				<input type="text" name="id" id="id" th:field="*{id}">
 			</div>
 			<div th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></div>
 		</div>
-	
-	<div>
+
+		<div>
 			<label for="pais">Pais</label>
 			<div>
 				<select id="pais" th:field="*{pais}">
-				<option value="">Seleccione: </option>
-				<option th:each="pais: ${listaPaises}" th:text="${pais.nombre}" th:value="${pais.id}"></option>
-				
+					<option value="">Seleccione:</option>
+					<option th:each="pais: ${listaPaises}" th:text="${pais.nombre}"
+						th:value="${pais.id}"></option>
+
 				</select>
 			</div>
 			<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}"></div>
+		</div>
+		
+		<div>
+			<label>Roles</label>
+			<div th:each="role: ${listaRolesString}">
+				<input type="checkbox"  th:field="*{roles}" th:value="${role}">
+				<label th:for="${#ids.prev('roles')}" th:text="${role}"></label>
+			</div>
+			<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}"></div>
 		</div>
 
 		<div>
@@ -71,7 +81,7 @@
 			</div>
 			<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
 		</div>
-		
+
 		<div>
 			<label for="cuenta">Cuenta</label>
 			<div>
@@ -79,13 +89,15 @@
 			</div>
 			<div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}"></div>
 		</div>
-		
+
 		<div>
 			<label for="fechaNacimiento">Fecha Nacimiento</label>
 			<div>
-				<input type="date" name="fechaNacimiento" id="fechaNacimiento" th:field="*{fechaNacimiento}" placeholder="yyyy-MM-dd">
+				<input type="date" name="fechaNacimiento" id="fechaNacimiento"
+					th:field="*{fechaNacimiento}" placeholder="yyyy-MM-dd">
 			</div>
-			<div th:if="${#fields.hasErrors('fechaNacimiento')}" th:errors="*{fechaNacimiento}"></div>
+			<div th:if="${#fields.hasErrors('fechaNacimiento')}"
+				th:errors="*{fechaNacimiento}"></div>
 		</div>
 
 		<div>
