--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -10,12 +10,21 @@
 
 
 		<div>
+			<label for="habilitar">Habilitar</label>
+			<div>
+				<input type="checkbox" id="habilitar" th:field="*{habilitar}">
+			</div>
+
+		</div>
+
+		<div>
 			<label for="id">Id</label>
 			<div>
 				<input type="text" name="id" id="id" th:field="*{id}">
 			</div>
 			<div th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></div>
 		</div>
+
 
 		<div>
 			<label for="pais">Pais</label>
@@ -29,11 +38,11 @@
 			</div>
 			<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}"></div>
 		</div>
-		
+
 		<div>
 			<label>Roles</label>
 			<div th:each="role: ${listaRoles}">
-				<input type="checkbox"  th:field="*{roles}" th:value="${role.id}">
+				<input type="checkbox" th:field="*{roles}" th:value="${role.id}">
 				<label th:for="${#ids.prev('roles')}" th:text="${role.nombre}"></label>
 			</div>
 			<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}"></div>
