--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -16,6 +16,16 @@
 			</div>
 
 		</div>
+		
+		<div>
+			<label >Genero</label>
+			
+			<div th:each="gene: ${genero}">
+				<input type="radio"  th:field="*{genero}" th:value="${gene}">
+				<label th:for="${#ids.prev('genero')}" th:text="${gene}"></label>
+			</div>
+			<div th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}"></div>
+		</div>
 
 		<div>
 			<label for="id">Id</label>
