--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -3,129 +3,135 @@
 <head>
 <meta charset="UTF-8">
 <title th:text="${titulo}"></title>
-</head>
+<!-- CSS only -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
+integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"></head>
 <body>
 	<h3 th:text="${titulo}"></h3>
+	
+	<div class="container">
 	<form th:action="@{/form}" th:object="${usuario}" method="POST">
 
 
-		<div>
-			<label for="habilitar">Habilitar</label>
-			<div>
-				<input type="checkbox" id="habilitar" th:field="*{habilitar}">
+		<div class="form-group row">
+			<label for="habilitar" class="col-form-label col-sm-2">Habilitar</label>
+			<div class="row col-sm-4">
+				<input type="checkbox" id="habilitar" th:field="*{habilitar}" 
+				class="form-control col-sm-1">
 			</div>
 
 		</div>
 
-		<div>
-			<label>Genero</label>
+		<div class="form-group row">
+			<label class="col-form-label col-sm-2">Genero</label>
 
-			<div th:each="gene: ${genero}">
-				<input type="radio" th:field="*{genero}" th:value="${gene}">
-				<label th:for="${#ids.prev('genero')}" th:text="${gene}"></label>
+			<div th:each="gene: ${genero}" class="row col-sm-2"> 
+				<input type="radio" th:field="*{genero}" th:value="${gene}" class="form-control col-sm-2">
+				<label th:for="${#ids.prev('genero')}" th:text="${gene}" class="col-form-label col-sm-2"></label>
 			</div>
-			<div th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}"></div>
+			<div th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}" class="alert alert-danger"></div>
 		</div>
 
-		<div>
-			<label for="id">Id</label>
-			<div>
-				<input type="text" name="id" id="id" th:field="*{id}">
+		<div class="form-group row">
+			<label class="col-form-label col-sm-2" for="id">Id</label>
+			<div class="col-sm-4">
+				<input type="text" name="id" id="id" th:field="*{id}" class="form-control">
 			</div>
-			<div th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></div>
+			<div th:if="${#fields.hasErrors('id')}" th:errors="*{id}" class="alert alert-danger"></div>
 		</div>
 
 
-		<div>
-			<label for="pais">Pais</label>
-			<div>
-				<select id="pais" th:field="*{pais}">
+		<div class="form-group row">
+			<label class="col-form-label col-sm-2" for="pais">Pais</label>
+			<div class="col-sm-4">
+				<select id="pais" th:field="*{pais}" class="form-control">
 					<option value="">Seleccione:</option>
 					<option th:each="pais: ${listaPaises}" th:text="${pais.nombre}"
 						th:value="${pais.id}"></option>
 
 				</select>
 			</div>
-			<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}"></div>
+			<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}" class="alert alert-danger"></div>
 		</div>
 
-		<div>
-			<label>Roles</label>
-			<div th:each="role: ${listaRoles}">
+		<div class="form-group row">
+			<label class="col-form-label col-sm-2">Roles</label>
+			<div th:each="role: ${listaRoles}" class="row col-sm-2">
 				<input type="checkbox" th:field="*{roles}" th:value="${role.id}"
-				th:cheked="${#lists.contains(usuario.roles, role)}">
-				<label th:for="${#ids.prev('roles')}" th:text="${role.nombre}"></label>
+				th:cheked="${#lists.contains(usuario.roles, role)}" class="form-control col-sm-2">
+				<label th:for="${#ids.prev('roles')}" th:text="${role.nombre}" class="col-form-label col-sm-2"></label>
 			</div>
-			<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}"></div>
+			<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}" class="alert alert-danger"></div>
 		</div>
 
-		<div>
-			<label for="nombre">Nombre</label>
-			<div>
-				<input type="text" name="nombre" id="nombre" th:field="*{nombre}">
+		<div class="form-group row">
+			<label class="col-form-label col-sm-2" for="nombre">Nombre</label>
+			<div class="col-sm-4">
+				<input type="text" name="nombre" id="nombre" th:field="*{nombre}" class="form-control">
 			</div>
-			<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
+			<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="alert alert-danger"></div>
 		</div>
 
-		<div>
-			<label for="apellido">Apellido</label>
-			<div>
+		<div class="form-group row">
+			<label class="col-form-label col-sm-2" for="apellido">Apellido</label>
+			<div class="col-sm-4">
 				<input type="text" name="apellido" id="apellido"
-					th:field="*{apellido}">
+					th:field="*{apellido}" class="form-control">
 			</div>
-			<div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></div>
+			<div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}" class="alert alert-danger"></div>
 		</div>
 
-		<div>
-			<label for="username">Username</label>
-			<div>
+		<div class="form-group row">
+			<label class="col-form-label col-sm-2" for="username">Username</label>
+			<div class="col-sm-4">
 				<input type="text" name="username" id="username"
-					th:field="*{username}">
+					th:field="*{username}" class="form-control">
 			</div>
-			<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
+			<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="alert alert-danger"></div>
 		</div>
 
-		<div>
-			<label for="email">Correo</label>
-			<div>
-				<input type="email" name="email" id="email" th:field="*{email}">
+		<div class="form-group row">
+			<label class="col-form-label col-sm-2" for="email">Correo</label>
+			<div class="col-sm-4">
+				<input type="email" name="email" id="email" th:field="*{email}" class="form-control">
 			</div>
-			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="alert alert-danger"></div>
 		</div>
 
-		<div>
-			<label for="password">Password</label>
-			<div>
+		<div class="form-group row">
+			<label class="col-form-label col-sm-2" for="password">Password</label>
+			<div class="col-sm-4">
 				<input type="password" name="password" id="password"
-					th:field="*{password}">
+					th:field="*{password}" class="form-control">
 			</div>
-			<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
+			<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="alert alert-danger"></div>
 		</div>
 
-		<div>
-			<label for="cuenta">Cuenta</label>
-			<div>
-				<input type="number" name="cuenta" id="cuenta" th:field="*{cuenta}">
+		<div class="form-group row">
+			<label class="col-form-label col-sm-2" for="cuenta">Cuenta</label>
+			<div class="col-sm-4">
+				<input type="number" name="cuenta" id="cuenta" th:field="*{cuenta}" class="form-control">
 			</div>
-			<div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}"></div>
+			<div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}" class="alert alert-danger"></div>
 		</div>
 
-		<div>
-			<label for="fechaNacimiento">Fecha Nacimiento</label>
-			<div>
+		<div class="form-group row">
+			<label class="col-form-label col-sm-2" for="fechaNacimiento">Fecha Nacimiento</label>
+			<div class="col-sm-4">
 				<input type="date" name="fechaNacimiento" id="fechaNacimiento"
-					th:field="*{fechaNacimiento}" placeholder="yyyy-MM-dd">
+					th:field="*{fechaNacimiento}" placeholder="yyyy-MM-dd" class="form-control">
 			</div>
 			<div th:if="${#fields.hasErrors('fechaNacimiento')}"
-				th:errors="*{fechaNacimiento}"></div>
+				th:errors="*{fechaNacimiento}" class="alert alert-danger"></div>
 		</div>
 
 		<div>
 			<div>
-				<input type="submit" value="Enviar">
+				<input type="submit" value="Enviar" class="btn btn-primary">
 			</div>
 		</div>
 		<input type="hidden" th:field="*{valorSecreto}">
 	</form>
+	</div>
 </body>
 </html>
