implementando fragment para reutilizar codigo

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -10,10 +10,9 @@
 	crossorigin="anonymous">
 </head>
 <body>
-	<div class="alert alert-success">
-		<span th:text="'Tiempo Transcurrido: ' + ${tiempoTranscurrido} + ' en milisegundos'"></span>
-
-	</div>
+	<section th:replace="componentes/tiempo :: interceptor">
+	
+	</section>
 	<h3 th:text="${titulo}"></h3>
 
 	<div class="container">
