--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -8,10 +8,8 @@ integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9If
 </head>
 <body>
 	<body>
-	<div class="alert alert-success">
-		<span th:text="'Tiempo Transcurrido: ' + ${tiempoTranscurrido} + ' en milisegundos'"></span>
-
-	</div>
+	<section th:replace="componentes/tiempo :: interceptor"></section>
+	
 <div class="container">
 <a th:href="@{/form}" class="btn btn-success btn-lg my-3">Volver</a>
 	<ul class="list-group my-2">
